[package]
name = "hoppy"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
rcgen = "0.11"
